@@ -1,3 +1,3 @@
 [egg_info]
-tag_build = 
+tag_build =
 tag_svn_revision = false
